FIXED: Page no jumps when URL-bar shows/hides

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -282,7 +282,6 @@
         overflow: hidden;
         display: flex;
         position: relative;
-        transition: all 999999s;
     }
 
     .attr-wrapper {
@@ -555,9 +554,7 @@
 }
     .swiper-container {
       width: 100%;
-      height: 100%;
       overflow: hidden;
-      transition: all 99999s;
   
       .swiper-wrapper {
         width: 100%;
